# shadow-finance-system

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  .flake8  .gitignore  Dockerfile  pyproject.toml  requirements.txt
backend/assets/: admin.py  apps.py  models.py  serializer.py  urls.py  views.py
backend/assets/migrations/: 0001_initial.py  0002_alter_asset_options.py
backend/authentication/: urls.py  views.py
backend/core/: settings.py  urls.py
backend/costumers/: admin.py  apps.py  models.py  urls.py  views.py
backend/costumers/migrations/: 0001_initial.py
backend/dividends/: admin.py  apps.py  filters.py  models.py  pagination.py  serializer.py  urls.py  views.py
backend/dividends/migrations/: 0001_initial.py
backend/expenses/: admin.py  apps.py  filters.py  mixins.py  models.py  serializer.py  urls.py  views.py
backend/expenses/migrations/: 0001_initial.py  0002_expense_payment_date_alter_expense_due_date.py  0003_installmentexpense_expense_installment_origin.py  0004_alter_expense_category_alter_expense_due_date_and_more.py  0005_recurringexpense_paidrecurringexpense.py
backend/expenses/services/: installment_manager_service.py  virtualization_logic_service.py
backend/investiments/: admin.py  apps.py  filters.py  models.py  paginations.py  serializer.py  urls.py  views.py
backend/investiments/migrations/: 0001_initial.py  0002_alter_iteminvestiment_order_type.py  0003_alter_cardinvestiment_options_and_more.py
frontend/: Dockerfile  components.json  next.config.ts  package.json  (+3 more)
(+84 files in other folders)
