[project]
name = "shadow-finance-system"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "django>=5.2.6",
    "djangorestframework>=3.16.1",
    "djangorestframework-simplejwt>=5.5.1",
    "django-cors-headers>=4.8.0",
    "django-filter>=25.1",
    "dj-database-url>=3.0.1",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "python-decouple>=3.8",
    "python-dateutil>=2.9.0.post0",
]
